--- a/css/stylesForPhoto.css
+++ b/css/stylesForPhoto.css
@@ -6,7 +6,13 @@ body {
 }
 
 h1 {
-  /*only for the title, header of the page*/
+  margin: 30px 0;
+  font-size: 2.5rem;
+  font-family: 'Montserrat', sans-serif;
+  color: #11999E;
+}
+
+h3 {
   margin: 30px 0;
   font-size: 2.5rem;
   font-family: 'Montserrat', sans-serif;
